Ignore local video files

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ FingerTracking.xcodeproj/xcuserdata/ft.xcuserdatad/xcdebugger/Breakpoints_v2.xcb
 FingerTracking.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 
 FingerTracking.xcodeproj/project.pbxproj
+
+*.mov
