--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ FingerTracking.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 FingerTracking.xcodeproj/project.pbxproj
 
 *.mov
+
+FingerTracking/Hand2.m4v
