Adding homework pdf and updating gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ FingerTracking.xcodeproj/project.pbxproj
 *.mov
 
 FingerTracking/Hand2.m4v
+
+FingerTracking.xcodeproj/project.xcworkspace/xcshareddata/FingerTracking.xccheckout
