Moving from Xcode to CLion
- Xcode cannot refactor C++ projects.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ FingerTracking.xcodeproj/project.xcworkspace/xcshareddata/FingerTracking.xccheck
 *.o
 
 FingerTracking.xcodeproj/project.xcworkspace/xcuserdata/ft.xcuserdatad/WorkspaceSettings.xcsettings
+FingerTracking/.idea
